--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Real-Time Chat App</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="data:,">
 </head>
 <body>
 
@@ -36,8 +37,7 @@
     </div>
 
   </div>
-
-  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
